@startuml
class enums.Estados
class enums.Meses
class enums.TipoEndereco
class enums.TipoTelefone
class enums.TipoUsuario
class exceptions.EstacionarVagaException
class exceptions.RealizarPagamentoException
class java.math.BigDecimal
class java.sql.Timestamp
class java.util.ArrayList
class java.util.Calendar
class java.util.GregorianCalendar
class objetos.Admin
class objetos.BoxVaga
class objetos.CidadeEstado
class objetos.Cliente
class objetos.Empresa
class objetos.Endereco
class objetos.Funcionario
class objetos.Mensalidade
class objetos.Pagamento
class objetos.PagamentoMensalidade
class objetos.Telefone
class objetos.Usuario
class objetos.UsuarioLogin
class objetos.Veiculo
objetos.Admin ..> enums.TipoUsuario
objetos.Admin ..> java.util.ArrayList
objetos.Admin --|> objetos.UsuarioLogin
objetos.BoxVaga ..> exceptions.EstacionarVagaException
objetos.BoxVaga ..> java.sql.Timestamp
objetos.CidadeEstado ..> enums.Estados
objetos.Cliente ..> enums.Meses
objetos.Cliente ..> enums.TipoUsuario
objetos.Cliente ..> exceptions.EstacionarVagaException
objetos.Cliente ..> exceptions.RealizarPagamentoException
objetos.Cliente ..> java.math.BigDecimal
objetos.Cliente ..> java.sql.Timestamp
objetos.Cliente ..> java.util.ArrayList
objetos.Cliente --|> objetos.Usuario
objetos.Empresa ..> java.util.ArrayList
objetos.Endereco ..> enums.TipoEndereco
objetos.Funcionario ..> enums.TipoUsuario
objetos.Funcionario ..> java.util.ArrayList
objetos.Funcionario --|> objetos.UsuarioLogin
objetos.Mensalidade ..> enums.Meses
objetos.Mensalidade ..> exceptions.RealizarPagamentoException
objetos.Mensalidade ..> java.math.BigDecimal
objetos.Mensalidade ..> java.sql.Timestamp
objetos.Mensalidade ..> java.util.ArrayList
objetos.Mensalidade ..> java.util.Calendar
objetos.Mensalidade ..> java.util.GregorianCalendar
objetos.Pagamento ..> java.math.BigDecimal
objetos.Pagamento ..> java.sql.Timestamp
objetos.PagamentoMensalidade ..> enums.Meses
objetos.PagamentoMensalidade ..> java.math.BigDecimal
objetos.PagamentoMensalidade ..> java.sql.Timestamp
objetos.PagamentoMensalidade --|> objetos.Pagamento
objetos.Telefone ..> enums.TipoTelefone
objetos.Usuario ..> enums.TipoUsuario
objetos.Usuario ..> java.util.ArrayList
objetos.UsuarioLogin ..> enums.TipoUsuario
objetos.UsuarioLogin ..> java.util.ArrayList
objetos.UsuarioLogin --|> objetos.Usuario
@enduml